syntax = "proto3";
option csharp_namespace = "Sep3";

package proof;


message GetStringsReq{

}

message GetStringRes{
  repeated string ominous=1;
}

message PutStringReq{
  string ominous=1;
}

message PutStringRes{
  string resp=1;
}

service ProofService{
  rpc getStrings(GetStringsReq) returns (GetStringRes);

  rpc putString(PutStringReq) returns (PutStringRes);
}